# mailclaw

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  biome.json  install.sh  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
rust-cli/: main.rs
skills/mailclaw/: SKILL.md
sql/: indexes.sql  schema.sql
src/: app.ts  env.d.ts  index.ts  types.ts
src/database/: d1.ts
src/handlers/: email.ts
src/middleware/: auth.ts
src/providers/: index.ts  resend.ts  types.ts
src/routes/: emails.ts  health.ts
src/utils/: helpers.ts  http.ts  mail.ts
