[package]
name = "mailclaw"
version = "1.0.1"
edition = "2024"
description = "Binary CLI for the MailClaw inbox API"

[[bin]]
name = "mailclaw"
path = "rust-cli/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
